--- a/style.css
+++ b/style.css
@@ -27,6 +27,16 @@ header{
     display:grid;
     grid-template-columns:repeat(auto-fit,minmax(6em,1fr ));
   }
+.searcher_button {
+  height: 42px;
+  width: 75px;
+  border-radius: 18px;
+}
+.text_search{
+  width: 150px;
+  height: 36px;
+  border-radius: 18px;
+}
 
 img{
     width: 400px;
@@ -41,11 +51,15 @@ a:hover {
     font-size: 1.5em;
     animation: shrink 1s infinite;
     text-decoration: underline;}
-img:hover, .content_recipe {
-    width: 450px;
-    animation: shrink 5s infinite;
-    transition:  1s;
-    }
+/* img:hover, .content_recipe {
+    width: 420px;
+    /*animation: shrink 1.5s infinite;
+    transition:  .2s;
+    } */
+img:hover{
+  transform: scale(1.2);
+  transition: .5s;
+}
 .images{
     display: flex;
     justify-content: center;
