--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@
     box-sizing: border-box;
 }
 :root{
-    --tenne-tawny: #d65108;
+
+    --tenne-tawny: #d65ff8;
     --tenne-tawny-dark: #b54507;
 }
 body{
